# shipsoftware-backend

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  ShipSoftwareBackend.sln  configuration.json.example
ShipSoftwareBackend/: AboutWindow.xaml  AboutWindow.xaml.cs  App.config  App.xaml  App.xaml.cs  Configuration.cs  ConfigurationWindow.xaml  ConfigurationWindow.xaml.cs  ExitMessageWindow.xaml  ExitMessageWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ShipSoftwareBackend.csproj
ShipSoftwareBackend/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
docs/: config_file.dox  doxygen.conf.in
scripts/: mingw-bundledlls  mingw-gtktheme
src/: api.c  api.h  api_thread.c  api_thread.h  config.c  config.h  config_window.c  config_window.h  database.c  database.h  dialogs.c  dialogs.h  json.c  json.h  logo.xpm  main.c  main_window.c  main_window.h  ship_defines.h  version.h.in
